# dipl_project

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
src/: camera.cpp  light.cpp  main.cpp  mainWindow.cpp  mainWindow.h  mesh.cpp  model.cpp  shader.cpp
src/headers/: camera.h  light.h  mainWindow.h  mesh.h  model.h  shader.h
src/imgui/: imgui_impl_glfw.cpp
